kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: newapp
  type: ClusterIP
